--- a/index.html
+++ b/index.html
@@ -5,33 +5,20 @@
   <title>OS 2000s</title>
   <link rel="stylesheet" href="style.css">
 
-  <script src="WindowsBar.js"></script>
+  <script src="app.js"></script>
 </head>
 <body>
+<div id="display">
+
+</div>
+
+
 
 <div class="WindowsBar">
   <div class="buttonMargin"></div>
-  <button type="button" class="WindowSel">
-    <div class="buttonIconHolder">
-      <img class="buttonIcon" src="OS_img/person.png">
 
-    </div>
-    <p class="buttonTitle">
-      About me
-    </p>
 
-  </button>
-  <button type="button" class="WindowSel">
-
-  </button>
-  <button type="button" class="WindowSel">
-
-  </button>
-  <button type="button" class="WindowSel">
-
-  </button>
-
-  <div class="WindowsInfo">
+  <div class="BarOSInfo">
     <p id="datetime">
 
     </p>
@@ -41,4 +28,43 @@
 </div>
 
 </body>
+
+
+<template id="window">
+  <div class="WindowTotal" id="AboutMe">
+    <div class="WindowTopOptions">
+      <div class="buttonIconHolder" style="width: 5%">
+        <img class="buttonIcon">
+      </div>
+      <p class="windowTitle">
+
+      </p>
+
+      <button type="button" class="MinimizeWindow">
+
+      </button>
+
+      <button type="button" class="CloseWindow">
+
+      </button>
+
+    </div>
+
+  </div>
+
+</template>
+
+<template id="button">
+  <button type="button" class="ButtonBarSel">
+    <div class="buttonIconHolder">
+      <img class="buttonIcon">
+
+    </div>
+    <p class="buttonTitle">
+
+    </p>
+
+  </button>
+</template>
+
 </html>
