Updated Color Scheme, added shortcuts to display to open and close the windows. Begun work on dragable windows.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id="display">
 
+
 </div>
 
 
@@ -33,7 +34,7 @@
 <template id="window">
   <div class="WindowTotal" id="AboutMe">
     <div class="WindowTopOptions">
-      <div class="buttonIconHolder" style="width: 5%">
+      <div class="buttonIconHolder">
         <img class="buttonIcon">
       </div>
       <p class="windowTitle">
@@ -67,4 +68,13 @@
   </button>
 </template>
 
+
+<template id="shortcut">
+  <button class="ShortcutHolder">
+    <img class="ShortcutIcon">
+    <p class="ShortcutTitle">
+
+    </p>
+  </button>
+</template>
 </html>
