--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>OS 2000s</title>
+  <title>PortfoliOS</title>
   <link rel="stylesheet" href="style.css">
 
   <script src="app.js"></script>
