*Modified window dragging code to work with IFrames *Added Iframes to each window app, to allow work to start on filling each with content *Added placeholder loading gif for incomplete apps *Added resume to the resume application works as intended on Chrome, but unsure on Firefox (Force browser pdf viewer?) *Forcing Favicon via link so that it works on Github pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>PortfoliOS</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
 
   <script src="app.js"></script>
 </head>
@@ -50,6 +51,8 @@
       </button>
 
     </div>
+
+    <iframe class="Application" src="/FrameApps/Loading.gif"></iframe>
 
   </div>
 
