Edit Spellbound compression to GZip

--- a/FrameApps/SpellboundDEMO/index.html
+++ b/FrameApps/SpellboundDEMO/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Spellbound.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Spellbound.data.br",
-        frameworkUrl: buildUrl + "/Spellbound.framework.js.br",
-        codeUrl: buildUrl + "/Spellbound.wasm.br",
+        dataUrl: buildUrl + "/Spellbound.data.gz",
+        frameworkUrl: buildUrl + "/Spellbound.framework.js.gz",
+        codeUrl: buildUrl + "/Spellbound.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "VerdantEclipse",
         productName: "Spellbound",
