Edit Spellbound compression to Uncompressed, hope this works

--- a/FrameApps/SpellboundDEMO/index.html
+++ b/FrameApps/SpellboundDEMO/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Spellbound.loader.js";
+      var loaderUrl = buildUrl + "/Spellbound_UC.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Spellbound.data.gz",
-        frameworkUrl: buildUrl + "/Spellbound.framework.js.gz",
-        codeUrl: buildUrl + "/Spellbound.wasm.gz",
+        dataUrl: buildUrl + "/Spellbound_UC.data",
+        frameworkUrl: buildUrl + "/Spellbound_UC.framework.js",
+        codeUrl: buildUrl + "/Spellbound_UC.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "VerdantEclipse",
         productName: "Spellbound",
