-Added complete Minesweeper game to retro view -Begun work on "normal" website view

--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Verdant Eclipse</title>
+    <link rel="stylesheet" href="style.css">
+
     <script> window.location.href = "https://nicolasaperez.github.io/Retro"</script>
+
 </head>
 <body>
+    <div id="Header">
+        <div>
+            <button id="RetroButton" onclick="location.href = 'https://nicolasaperez.github.io/Retro'">
+                Switch to RETRO
+            </button>
+        </div>
+        <div id="QuickBar">
+            <button class="QuickBarButton">
+                About Me
+            </button>
+            <button class="QuickBarButton">
+                Contact Me
+            </button>
+            <button class="QuickBarButton">
+                Projects
+            </button>
+            <button class="QuickBarButton">
+                Resume
+            </button>
+            <button class="QuickBarButton">
+                Source Code
+            </button>
+
+
+        </div>
+
+    </div>
+    <div id="content">
+
+    </div>
+
+
 
 
 </body>
