--- a/FrameApps/Minesweeper/index.html
+++ b/FrameApps/Minesweeper/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=625 height=729></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -62,7 +62,7 @@
         frameworkUrl: buildUrl + "/Minesweeper.framework.js",
         codeUrl: buildUrl + "/Minesweeper.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "Verdant Eclipse",
         productName: "Minesweeper",
         productVersion: "1.0",
         showBanner: unityShowBanner,
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "625px";
+        canvas.style.height = "729px";
       }
 
       loadingBar.style.display = "block";
