--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Verdant Eclipse</title>
     <link rel="stylesheet" href="style.css">
-
     <script> window.location.href = "https://nicolasaperez.github.io/Retro"</script>
 
 </head>
@@ -36,7 +35,9 @@
         </div>
 
     </div>
+    <hr style="color: black">
     <div id="content">
+
 
     </div>
 
