--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <title>Verdant Eclipse</title>
     <link rel="stylesheet" href="style.css">
-    <script> window.location.href = "https://nicolasaperez.github.io/Retro"</script>
+
 
 </head>
 <body>
     <div id="Header">
         <div>
+            <img src="/OS_img/VerdantEclipseTight.png" id="PersonalLogo">
             <button id="RetroButton" onclick="location.href = 'https://nicolasaperez.github.io/Retro'">
-                Switch to RETRO
+                <span>Switch to</span>
+                <span style="font-family: 'Bookman Old Style'">RETRO</span>
             </button>
         </div>
         <div id="QuickBar">
@@ -35,10 +37,10 @@
         </div>
 
     </div>
-    <hr style="color: black">
+    <hr style="color: white; background-color: white; height: 10px">
     <div id="content">
-
-
+        I highly recommend switching to "Retro" View, as this simplified version of the website is currently incomplete
+        and I believe the "Retro" view to be a better showcase of my abilities and style.
     </div>
 
 
