Draggable set to false on a variety of images

--- a/Retro/index.html
+++ b/Retro/index.html
@@ -36,7 +36,7 @@
   <div class="WindowTotal" id="AboutMe">
     <div class="WindowTopOptions">
       <div class="buttonIconHolder">
-        <img class="buttonIcon">
+        <img class="buttonIcon" draggable="false">
       </div>
       <p class="windowTitle">
 
@@ -61,7 +61,7 @@
 <template id="button">
   <button type="button" class="ButtonBarSel">
     <div class="buttonIconHolder">
-      <img class="buttonIcon">
+      <img class="buttonIcon" draggable="false">
 
     </div>
     <p class="buttonTitle">
@@ -74,7 +74,7 @@
 
 <template id="shortcut">
   <button class="ShortcutHolder">
-    <img class="ShortcutIcon">
+    <img class="ShortcutIcon" draggable="false">
     <p class="ShortcutTitle">
 
     </p>
