--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div id="Header">
         <div>
-            <img src="/OS_img/VerdantEclipseTight.png" id="PersonalLogo">
+            <img src="/OS_img/VerdantEclipseTight.png" id="PersonalLogo" draggable="false">
             <button id="RetroButton" onclick="location.href = 'https://nicolasaperez.github.io/Retro'">
                 <span>Switch to</span>
-                <span style="font-family: 'Bookman Old Style'">RETRO</span>
+                <span style="font-family: 'Bookman Old Style',serif">RETRO</span>
             </button>
         </div>
         <div id="QuickBar">
