Major Refactor and Work done: -Changed Directorys to better reflect the seperated Retro and Simplified views -Changed most buttons in Simple view to Anchors -Added Subdirectories for the pages in Simple view -Moved Header in Simple view to a Javascript file to allow it to not appear on Iframes and reuse in multiple HTML files -Added photo, and two paragraphs to About Me (Still needs hobby/creative paragraph) -Style changes -Updated Spellbound Demo to work better in WebGL as well as fix some bugs that appeared

--- a/Retro/index.html
+++ b/Retro/index.html
@@ -52,7 +52,7 @@
 
     </div>
 
-    <iframe class="Application" src="/FrameApps/Loading.gif"></iframe>
+    <iframe class="Application" src="/Retro/FrameApps/Loading.gif"></iframe>
 
   </div>
 
