--- a/index.html
+++ b/index.html
@@ -4,47 +4,33 @@
     <meta charset="UTF-8">
     <title>Verdant Eclipse</title>
     <link rel="stylesheet" href="style.css">
+    <script src="/simplified.js"></script>
 
 
 </head>
 <body>
     <div id="Header">
-        <div>
-            <img src="/OS_img/VerdantEclipseTight.png" id="PersonalLogo" draggable="false">
-            <button id="RetroButton" onclick="location.href = 'https://nicolasaperez.github.io/Retro'">
-                <span>Switch to</span>
-                <span style="font-family: 'Bookman Old Style',serif">RETRO</span>
-            </button>
-        </div>
-        <div id="QuickBar">
-            <button class="QuickBarButton">
-                About Me
-            </button>
-            <button class="QuickBarButton">
-                Contact Me
-            </button>
-            <button class="QuickBarButton">
-                Projects
-            </button>
-            <button class="QuickBarButton">
-                Resume
-            </button>
-            <button class="QuickBarButton">
-                Source Code
-            </button>
-
-
-        </div>
 
     </div>
-    <hr style="color: white; background-color: white; height: 10px">
+    <br>
+
     <div id="content">
-        I highly recommend switching to "Retro" View, as this simplified version of the website is currently incomplete
-        and I believe the "Retro" view to be a better showcase of my abilities and style.
+        <h1>
+            Welcome to Nicolas's Website!
+        </h1>
+        <p>
+            Hello! <br>
+            Before continuing to the sections mentioned above in the toolbar, I would like to state that this is
+            a "simplified" version of my website intended for easy viewing of the content and text, if you're reading
+            this on a desktop computer or laptop I would highly recommend clicking the "Retro" button found above the
+            toolbar. This will lead to the feature complete version of the website where most of the work has gone into.
+            <br> <br>
+            The Retro view is my approximation of using a simple OS desktop with functioning moving windows, and WebGL
+            versions of some of my projects where applicable. This also includes a version of Minesweeper made in Unity
+            to capture the feeling of an old OS like Windows XP.
+
+        </p>
+
     </div>
-
-
-
-
 </body>
 </html>
