Minor Changes to Update Info --Preparation for refactor

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -34,6 +34,7 @@
             </p>
 
         </div>
+        <div class="MultiContent">
 
         <p>
         &emsp; &emsp; During my time at University, I made sure to take classes on a variety of topics including my minor
@@ -44,6 +45,11 @@
         those AI classes I learned how to program a variety of AI techniques including Greedy Best First, A-Star,
         Flocking, and more. To help with my own personal passions, I’ve also taken courses on visual and game design
         which allowed me to learn how to work with the Unity game engine and C#.
+        </p>
+        </div>
+
+        <div class="MultiContent">
+        <p>
         The highlight of my academic career at UF would be my time spent in IPPD. During this “course” I spent time
         working on a real project that needed to be used by Raytheon, in what was essentially an internship. To go
         into more specifics, the project I worked on was a training program in use by Raytheon that needed some
@@ -56,6 +62,7 @@
         We kept track of the project through a weekly blog which can be found
             <a href="https://www.ippd.ufl.edu/blogs/ay2223team15/blog-posts/" style="color: lightgray">here</a>!
         </p>
+        </div>
 
 
 
