--- a/ContactMe/index.html
+++ b/ContactMe/index.html
@@ -17,7 +17,7 @@
         </h2>
         <p>
             <b>Email:</b> nicoperez01@gmail.com <br>
-            <b>LinkedIn:</b> https://www.linkedin.com/in/nicolas-perez-4a3461247/ <br>
+            <b>LinkedIn:</b> <a href="https://www.linkedin.com/in/nicolas-alonso-perez/">https://www.linkedin.com/in/nicolas-alonso-perez/</a> <br>
             Mobile Phone Number given on Request
         </p>
 
