*Begin movement of window managing code to the elements themselves

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div class="Background">
     <div class="Shortcut_container">
+      <window-shortcut class="Short" name="TEST" icon="AboutMe" app-id="1"></window-shortcut>
 
     </div>
   </div>
