--- a/index.html
+++ b/index.html
@@ -85,9 +85,16 @@
     button.TitleBarOptionsButton{
       aspect-ratio: 1/1;
       height: 70%;
-      background-image: none;
+      background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.5), rgba(200,200,200,0.1) 50%);
+      margin: 2px;
       border-width: 0;
       border-radius: 50%;
+    }
+    button.TitleBarOptionsButton:hover{
+      background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.9), rgba(200,200,200,0.1) 50%);
+    }
+    button.TitleBarOptionsButton:active{
+      background-image: linear-gradient(180deg, rgba(100, 100, 100, 0.9), rgba(200,200,200,0.1) 50%);
     }
     button.TitleBarOptionsButton:nth-child(1){
       background-color: #b0120a;
@@ -130,7 +137,7 @@
   </div>
 </template>
 
-<template id="button">
+<template id="TaskbarButton">
   <button type="button" class="ButtonBarSel">
     <div class="buttonIconHolder">
       <img class="buttonIcon" draggable="false">
