--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico?">
 
+  <script src="WindowManager.js" type="module"></script>
+
   <script src="CustomElements.js" type="module"></script>
-  <script src="app.js"></script>
+  <script src="app.js" type="module"></script>
 </head>
 <body>
   <div class="Background">
