--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <alert-window id="Alert_1" checkSession="true">
     <p id="openOSAlert" slot="AlertMessage">
       The following website is still under construction, and has yet to be finished. <br/>
-      Some items will be out of date until it is finished. <br/>
+      Some items and information will be out of date until it is finished. <br/>
       The last update was on:
     </p>
   </alert-window>
@@ -188,6 +188,7 @@
       margin: 2px;
       border-width: 0;
       border-radius: 50%;
+      font-size: 1vh;
       color: var(--text_color);
     }
     button.TitleBarOptionsButton:hover{
@@ -206,13 +207,25 @@
       border-color: #9ccc65;
     }
 
-    iframe.Application {
+    div.Application {
       width: 100%;
       height: 95%;
       border: none;
       background-color: white;
       border-top: 4px solid var(--main_BG_color);
       margin-top: -4px;
+      overflow: auto;
+      white-space: nowrap;
+    }
+
+    ::slotted(object){
+      width: 100%;
+      height: 100%;
+    }
+    ::slotted(img){
+      height: 100%;
+      margin: 5px;
+      aspect-ratio: auto;
     }
   </style>
 
@@ -230,9 +243,11 @@
       </div>
 
     </div>
-    <slot name="Application">
-      <iframe class="Application" src="/Apps/FrameApps/Loading.gif"></iframe>
-    </slot>
+    <div class="Application">
+      <slot name="Application">
+        <iframe src="/Apps/Loading.gif"></iframe>
+      </slot>
+    </div>
 
   </div>
 </template>
