--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
       background-color: transparent;
       margin-left: 0.5vw;
       height: 100%;
+      min-width: 175px;
+      max-width: 200px;
 
       display: flex;
       align-items: center;
@@ -295,7 +297,12 @@
 
     p.TBTitle {
       width: 75%;
+      max-height: 100%;
+      padding-right: 15px;
       text-align: left;
+      font-weight: bold;
+      text-overflow: ellipsis;
+      color: white;
     }
 
   </style>
@@ -318,6 +325,8 @@
       background-color: transparent;
       border-style: none;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
     }
     .ShortcutIcon{
       width: 100px;
@@ -329,7 +338,7 @@
       font-weight: bold;
       color: white;
       text-shadow: 1px 1px black;
-      overflow: hidden;
+      overflow-wrap: anywhere;
       white-space: initial;
     }
   </style>
