*Changes to AboutMe and ContactMe sub-"sites" CSS *Removal of Templates folder

--- a/Apps/ContactMe.html
+++ b/Apps/ContactMe.html
@@ -10,7 +10,7 @@
 
     </div>
     <br>
-    <div class="content">
+    <div class="Content">
         <h2>
             Contact Me!
         </h2>
