--- a/index.html
+++ b/index.html
@@ -233,6 +233,17 @@
       margin: 5px;
       aspect-ratio: auto;
     }
+    
+    @media screen and (max-aspect-ratio: 3/4) {
+      div.AppWindow{
+        width: 100%;
+        height: 91vh;
+        left: 0 !important;
+        top: 0 !important;
+
+      }
+      
+    }
   </style>
 
   <div class="AppWindow">
